# actix-loadtest

./: Cargo.toml
src/: client.rs  main.rs  server.rs
